[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "flext-target-oracle-wms"
version = "0.10.0-dev"
description = "FLEXT Target Oracle WMS - Singer Target for Oracle WMS Data"
readme = "README.md"
keywords = [
  "data-loading",
  "enterprise",
  "etl",
  "flext",
  "singer",
  "target",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving",
  "Typing :: Typed",
]
dependencies = [
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "flext-observability",
  "flext-oracle-wms",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.41",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-target-oracle-wms = "flext_target_oracle_wms.cli:main"
scripts.target-oracle-wms = "flext_target_oracle_wms.cli:main"

[tool]
[tool.poetry]
dependencies.python = ">=3.13,<3.14"
dependencies.flext-cli.develop = true
dependencies.flext-cli.path = ".flext-deps/flext-cli"
dependencies.flext-core.develop = true
dependencies.flext-core.path = ".flext-deps/flext-core"
dependencies.flext-db-oracle.develop = true
dependencies.flext-db-oracle.path = ".flext-deps/flext-db-oracle"
dependencies.flext-meltano.develop = true
dependencies.flext-meltano.path = ".flext-deps/flext-meltano"
dependencies.flext-observability.develop = true
dependencies.flext-observability.path = ".flext-deps/flext-observability"
dependencies.flext-oracle-wms.develop = true
dependencies.flext-oracle-wms.path = ".flext-deps/flext-oracle-wms"
group.dev.dependencies.autoflake = ">=2.3.1"
group.dev.dependencies.black = ">=25.1.0"
group.dev.dependencies.codespell = ">=2.3.0"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.isort = ">=6.0.1"
group.dev.dependencies.pre-commit = ">=4.0.1"
group.dev.dependencies.pylint = ">=3.3.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pyupgrade = ">=3.19.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.vulture = ">=2.13"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.security.dependencies.bandit = ">=1.8.0"
group.security.dependencies.pip-audit = ">=2.7.3"
group.test.dependencies.factory-boy = ">=3.3.1"
group.test.dependencies.faker = ">=37.4.0"
group.test.dependencies.hypothesis = ">=6.125.0"
group.test.dependencies.pytest = ">=8.4.0"
group.test.dependencies.pytest-benchmark = ">=5.1.0"
group.test.dependencies.pytest-clarity = ">=1.0.1"
group.test.dependencies.pytest-cov = ">=7.0.0"
group.test.dependencies.pytest-deadfixtures = ">=2.2.1"
group.test.dependencies.pytest-env = ">=1.1.5"
group.test.dependencies.pytest-mock = ">=3.14.0"
group.test.dependencies.pytest-sugar = ">=1.0.0"
group.test.dependencies.pytest-timeout = ">=2.4.0"
group.test.dependencies.pytest-xdist = ">=3.8.0"
group.typings.dependencies.types-psutil = ">=7.0.0"
group.typings.dependencies.types-python-dateutil = ">=2.9.0"
group.typings.dependencies.types-pyyaml = ">=6.0.12"
group.typings.dependencies.types-redis = ">=4.6.0"
group.typings.dependencies.types-requests = ">=2.32.4"
group.typings.dependencies.types-setuptools = ">=80.9.0"
group.typings.dependencies.types-toml = ">=0.10.8.20240310"
packages = [ { from = "src", include = "flext_target_oracle_wms" } ]

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.deptry]
known_first_party = [
  "flext_target_oracle_wms",
  "flext_core",
  "flext_cli",
  "flext_db_oracle",
  "flext_meltano",
  "flext_oracle_wms",
  "flext_observability",
]
pep621_dev_dependency_groups = [
  "dev",
  "test",
  "typings",
  "security",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  "autoflake",
  "bandit",
  "black",
  "codespell",
  "commitizen",
  "detect-secrets",
  "isort",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pyupgrade",
  "radon",
  "ruff",
  "vulture",
  # Type stubs
  "types-psutil",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  # Runtime deps used indirectly (via pydantic, flext)
  "faker",
  "pydantic-core",
  "pydantic-settings",
  "pytest",
  "pytest-cov",
  # Transitive deps (used via flext-core)
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "flext-observability",
  "flext-oracle-wms",
]

[tool.pytest]
ini_options.addopts = [ "--maxfail=1", "--strict-config", "--strict-markers", "--tb=short", "-ra" ]
ini_options.markers = [
  "e2e: End-to-end tests",
  "edge_cases: Edge case tests",
  "integration: Integration tests",
  "integrity: Data integrity tests",
  "oracle: Oracle WMS specific tests",
  "performance: Performance tests",
  "resilience: Resilience tests",
  "slow: Slow tests",
  "smoke: Smoke tests",
  "stress: Stress tests",
  "unit: Unit tests",
]
ini_options.minversion = "8.0"
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.source = [ "src/flext_target_oracle_wms" ]
report.fail_under = 100
report.precision = 2

[tool.pyrefly]
search-path = [
  "../typings",
  "../typings/generated",
  "src",
  "tests",
  "examples",
]

[tool.bandit]
exclude_dirs = [
  "build",
  "dist",
  "tests",
]
skips = [
  "B101",
  "B601",
  "B404",
  "B603",
  "B607",
  "B105",
  "B608",
]
