[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "flext-target-oracle-wms"
version = "0.12.0-dev"
description = "FLEXT Target Oracle WMS - Singer Target for Oracle WMS Data"
readme = "README.md"
keywords = [
  "data-loading",
  "enterprise",
  "etl",
  "flext",
  "singer",
  "target",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving",
  "Typing :: Typed",
]
dependencies = [
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "flext-observability",
  "flext-oracle-wms",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.41",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-target-oracle-wms = "flext_target_oracle_wms.cli:main"
scripts.target-oracle-wms = "flext_target_oracle_wms.cli:main"

[tool]
[tool.poetry]
dependencies.python = ">=3.13,<3.14"
dependencies.flext-cli.develop = true
dependencies.flext-cli.path = "../flext-cli"
dependencies.flext-core.develop = true
dependencies.flext-core.path = "../flext-core"
dependencies.flext-db-oracle.develop = true
dependencies.flext-db-oracle.path = "../flext-db-oracle"
dependencies.flext-meltano.develop = true
dependencies.flext-meltano.path = "../flext-meltano"
dependencies.flext-observability.develop = true
dependencies.flext-observability.path = "../flext-observability"
dependencies.flext-oracle-wms.develop = true
dependencies.flext-oracle-wms.path = "../flext-oracle-wms"
group.dev.dependencies.autoflake = ">=2.3.1"
group.dev.dependencies.black = ">=25.1.0"
group.dev.dependencies.codespell = ">=2.3.0"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.isort = ">=6.0.1"
group.dev.dependencies.pre-commit = ">=4.0.1"
group.dev.dependencies.pylint = ">=3.3.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pyupgrade = ">=3.19.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.vulture = ">=2.13"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.security.dependencies.bandit = ">=1.8.0"
group.security.dependencies.pip-audit = ">=2.7.3"
group.test.dependencies.factory-boy = ">=3.3.1"
group.test.dependencies.faker = ">=37.4.0"
group.test.dependencies.hypothesis = ">=6.125.0"
group.test.dependencies.pytest = ">=8.4.0"
group.test.dependencies.pytest-benchmark = ">=5.1.0"
group.test.dependencies.pytest-clarity = ">=1.0.1"
group.test.dependencies.pytest-cov = ">=7.0.0"
group.test.dependencies.pytest-deadfixtures = ">=2.2.1"
group.test.dependencies.pytest-env = ">=1.1.5"
group.test.dependencies.pytest-mock = ">=3.14.0"
group.test.dependencies.pytest-sugar = ">=1.0.0"
group.test.dependencies.pytest-timeout = ">=2.4.0"
group.test.dependencies.pytest-xdist = ">=3.8.0"
group.typings.dependencies.types-psutil = ">=7.0.0"
group.typings.dependencies.types-python-dateutil = ">=2.9.0"
group.typings.dependencies.types-pyyaml = ">=6.0.12"
group.typings.dependencies.types-redis = ">=4.6.0"
group.typings.dependencies.types-requests = ">=2.32.4"
group.typings.dependencies.types-setuptools = ">=80.9.0"
group.typings.dependencies.types-toml = ">=0.10.8.20240310"
packages = [ { from = "src", include = "flext_target_oracle_wms" } ]

[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = [ "flext_target_oracle_wms" ]

[tool.codespell]
ignore-words-list = "dn,cn,ou,uid,sn,aci,acl,ldif,flext,FLEXT,dbt,oic,wms,grpc,meltano,protobuf,creds,assertIn"
skip = """\
  .git,*.lock,*.egg-info,dist,build,.venv,__pycache__,.mypy_cache,.pytest_cache,.ruff_cache,node_modules,vendor,*.pb2*.\
  py\
  """

[tool.deptry]
known_first_party = [
  "flext",
  "flext_quality",
]
pep621_dev_dependency_groups = [
  "dev",
  "docs",
  "security",
  "test",
  "typings",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  "autoflake",
  "bandit",
  "black",
  "codespell",
  "commitizen",
  "detect-secrets",
  "isort",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pyupgrade",
  "radon",
  "ruff",
  "vulture",
  # Type stubs
  "types-psutil",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  # Runtime deps used indirectly (via pydantic, flext)
  "faker",
  "pydantic-core",
  "pydantic-settings",
  "pytest",
  "pytest-cov",
  # Transitive deps (used via flext-core)
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "flext-observability",
  "flext-oracle-wms",
]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "scripts",
  "tests",
  "vendor",
  "venv",
]
extend_exclude = [
  "flexcore/",
  "flext-.*/",
]

[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pyasn1(.*|$)",
]
ini_options.python_classes = [
  "Test*",
]
ini_options.python_files = [
  "*_test.py",
  "*_tests.py",
  "test_*.py",
]
ini_options.python_functions = [
  "test_*",
]
ini_options.pythonpath = [
  ".",
  "src",
]
ini_options.markers = [
  "docker: marca testes que requerem Docker",
  "e2e: marca testes como testes de integração end-to-end",
  "edge_cases: marca testes de casos extremos",
  "integration: marca testes como testes de integração",
  "integrity: marca testes de integridade",
  "oracle: marca testes específicos do Oracle",
  "performance: marca testes de performance",
  "resilience: marca testes de resiliência",
  "slow: marca testes como execução lenta",
  "stress: marca testes de stress",
  "unit: marca testes como testes unitários",
]
ini_options.minversion = "8.0"
ini_options.testpaths = [
  "tests/",
]

[tool.coverage]
run.branch = true
run.omit = [
  "*/__pycache__/*",
  "*/_pb2*.py",
  "*/conftest.py",
  "*/tests/*",
]
run.relative_files = true
run.source = [ "src/flext_target_oracle_wms" ]
report.exclude_lines = [
  "@abstractmethod",
  "^\\s*\\.\\.\\.\\s*$",
  "def __repr__",
  "def __str__",
  'if __name__ == "__main__":',
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 100
report.partial_branches = [
  "pragma: no branch",
]
report.precision = 2
report.show_missing = true
report.skip_empty = true
html.directory = "htmlcov"
xml.output = "coverage.xml"

[tool.mypy]
cache_dir = ".mypy_cache"
check_untyped_defs = true
color_output = true
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
exclude = [
  ".*/generate_config.py",
  ".*/manage.py",
  ".*_pb2\\.py$",
  ".*_pb2_grpc\\.py$",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "vendor/",
]
extra_checks = true
follow_imports = "silent"
follow_imports_for_stubs = true
incremental = true
local_partial_types = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
platform = "linux"
pretty = true
python_version = "3.13"
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
mypy_path = [
  "..",
  "../typings",
  "../typings/generated",
  "src",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-meltano/src",
  "../flext-observability/src",
  "../flext-oracle-wms/src",
]

[tool.pyrefly]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]
search-path = [
  "..",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-meltano/src",
  "../flext-observability/src",
  "../flext-oracle-wms/src",
  "../typings",
  "../typings/generated",
  "src",
  "tests",
  "examples",
  "scripts",
]

[tool.pyright]
enableTypeIgnoreComments = false
extraPaths = [
  "..",
  "src",
  "tests",
  "examples",
  "scripts",
  "../typings",
  "../typings/generated",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-meltano/src",
  "../flext-observability/src",
  "../flext-oracle-wms/src",
]
include = [ "src", "scripts", "tests", "examples" ]
exclude = [
  "**/*.pb2.py",
  "**/*.pb2_grpc.py",
  ".git/",
  ".meltano/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "target/",
]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportAssertAlwaysTrue = false
reportCallInDefaultInitializer = "error"
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitRelativeImport = false
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeForm = false
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingSuperCall = "warning"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "warning"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportPrivateUsage = false
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
typeCheckingMode = "strict"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = "error"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "warning"
reportUnusedClass = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
useLibraryCodeForTypes = true

[tool.bandit]
exclude_dirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "tests",
  "vendor",
]
skips = [ "B404", "B603", "B607", "B105", "B608" ]

[tool.complexipy]
max_complexity = 15
output_format = "plain"

[tool.vulture]
exclude = [
  ".*/examples/",
  ".*/scripts/",
  ".*/tests/",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "tests/",
  "vendor/",
]
min_confidence = 80
paths = [
  "**/src",
  "src",
]
sort_by_size = true
verbose = false
