# [MANAGED] FLEXT pyproject standardization
# Sections with [MANAGED] are enforced by flext_infra.deps.modernizer.
# Run `make mod` to regenerate all managed pyproject sections.
# Sections with [CUSTOM] are project-specific extension points.
# [MANAGED] build system
[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

# [CUSTOM] project metadata
[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving",
  "Typing :: Typed",
]
dependencies = [
  "flext-cli",
  "flext-core",
  "flext-db-oracle",
  "flext-meltano",
  "flext-observability",
  "flext-oracle-wms",
  "pydantic-core>=2.46.3",
  "pydantic-settings>=2.14.0",
  "pydantic>=2.13.3",
  "sqlalchemy>=2.0.49",
]
description = "FLEXT Target Oracle WMS - Singer Target for Oracle WMS Data"
keywords = [ "data-loading", "enterprise", "etl", "flext", "singer", "target", "typed" ]
license = "MIT"
name = "flext-target-oracle-wms"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.12.0rc0"

[[project.authors]]
email = "team@flext.sh"
name = "FLEXT Team"

[[project.maintainers]]
email = "team@flext.sh"
name = "FLEXT Team"

# [MANAGED] consolidated development dependencies
[project.optional-dependencies]
dev = [
  "autoflake>=2.3.1",
  "bandit>=1.8",
  "black>=25.1",
  "blacken-docs>=1.19",
  "codespell>=2.3",
  "deptry>=0.23",
  "django-stubs>=5.2.2",
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "hypothesis>=6.125",
  "isort>=6.0.1",
  "matplotlib-stubs>=0.3",
  "mkdocs-awesome-pages-plugin>=2.9",
  "mkdocs-encryptcontent-plugin>=2",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-get-deps>=0.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-macros-plugin>=1",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-material>=9.5",
  "mkdocs-mermaid2-plugin>=1.1",
  "mkdocs-minify-plugin>=0.7",
  "mkdocs-print-site-plugin>=0.8",
  "mkdocs-redirects>=1.2",
  "mkdocs-section-index>=0.3.12",
  "mkdocs-versioning>=0.2",
  "mkdocs>=1.6",
  "mkdocstrings-python>=1.7",
  "mkdocstrings>=0.24",
  "pip-audit>=2.7.3",
  "pre-commit>=4.6.0",
  "pylint>=3.3",
  "pyrefly>=1.1.1,<1.2.0",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-codeblocks>=0.17.0",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-markdown-docs>=0.9.2",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "pytest>=8.4",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "types-cachetools>=6.2",
  "types-cffi>=2.0",
  "types-click>=7.1",
  "types-defusedxml>=0.7",
  "types-docker>=7.1",
  "types-flask>=1.1.6",
  "types-ldap3>=2.9.13.20250622",
  "types-paramiko>=4.0",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-pyasn1>=0.6",
  "types-pyopenssl>=24.1",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12.20260518",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-tabulate>=0.10",
  "types-toml>=0.10.8.20240310",
  "vulture>=2.13",
]

[project.scripts]
flext-target-oracle-wms = "flext_target_oracle_wms.cli:main"
target-oracle-wms = "flext_target_oracle_wms.cli:main"

[project.urls]
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
Homepage = "https://github.com/flext-sh/flext"

# [MANAGED] codespell
[tool.codespell]
check-filenames = true
ignore-words-list = "crate,nd"

# [MANAGED] coverage
[tool.coverage.report]
exclude_also = [ "if TYPE_CHECKING:", "if _t.TYPE_CHECKING:", "if typing.TYPE_CHECKING:" ]
fail_under = 20
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.run]
omit = [ "*/dependency_injector/providers.pyx" ]

# [MANAGED] deptry
[tool.deptry]
known_first_party = [
  "flext_cli",
  "flext_core",
  "flext_db_oracle",
  "flext_meltano",
  "flext_observability",
  "flext_oracle_wms",
  "flext_target_oracle_wms",
]
pep621_dev_dependency_groups = [ "dev" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/flext_target_oracle_wms" ]

[tool.hatch.metadata]
allow-direct-references = true

# [MANAGED] mypy
[tool.mypy]
check_untyped_defs = true
disable_error_code = [
  "assignment",
  "attr-defined",
  "call-arg",
  "misc",
  "name-defined",
  "prop-decorator",
  "valid-type",
]
exclude = "^tests/fixtures(?:/|$)"
explicit_package_bases = true
extra_checks = true
follow_imports = "normal"
ignore_missing_imports = true
local_partial_types = true
mypy_path = [ ".", "src" ]
namespace_packages = true
no_implicit_reexport = true
overrides = [  ]
plugins = [ "pydantic.mypy", "returns.contrib.mypy.returns_plugin" ]
python_version = "3.13"
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.poetry]

# [MANAGED] pydantic-mypy
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# [MANAGED] pyrefly
[tool.pyrefly]
disable-project-excludes-heuristics = true
ignore-errors-in-generated-code = true
project-excludes = [
  "**/*_pb2*.py",
  "**/*_pb2_grpc*.py",
  "**/.venv/**",
  "**/__pycache__",
  "**/__pyrefly_virtual__/**",
  "**/node_modules",
  "**/site-packages/**",
  "**/typings/**",
  "**/vendor/**",
  "**/venv/**",
  ".venv/**",
  "typings/**",
  "vendor/**",
]
project-includes = [ "examples/**/*.py*", "src/**/*.py*", "tests/**/*.py*" ]
python-interpreter-path = "../.venv/bin/python"
python-version = "3.13"
search-path = [
  ".",
  "../flext-api/src",
  "../flext-cli/src",
  "../flext-core/src",
  "../flext-db-oracle/src",
  "../flext-infra/src",
  "../flext-meltano/src",
  "../flext-observability/src",
  "../flext-oracle-wms/src",
  "../flext-tests/src",
  "../flext-web/src",
  "src",
]
use-ignore-files = false

[tool.pyrefly.errors]
abstract-method-call = false
bad-argument-count = "error"
bad-argument-type = "error"
bad-assignment = "error"
bad-class-definition = "error"
bad-context-manager = "error"
bad-dunder-all = "error"
bad-function-definition = "error"
bad-index = "error"
bad-instantiation = "error"
bad-keyword-argument = "error"
bad-match = "error"
bad-override = false
bad-param-name-override = "error"
bad-raise = "error"
bad-return = "error"
bad-specialization = "error"
bad-typed-dict = "error"
bad-typed-dict-key = "error"
bad-unpacking = "error"
deprecated = "error"
implicit-abstract-class = "error"
implicit-any = "error"
implicit-import = "error"
implicitly-defined-attribute = "error"
inconsistent-inheritance = "error"
inconsistent-overload = "error"
inconsistent-overload-default = "error"
invalid-annotation = "error"
invalid-argument = "error"
invalid-decorator = "error"
invalid-inheritance = "error"
invalid-literal = "error"
invalid-overload = "error"
invalid-param-spec = "error"
invalid-pattern = "error"
invalid-self-type = "error"
invalid-super-call = "error"
invalid-type-alias = "error"
invalid-type-var = "error"
invalid-type-var-tuple = "error"
invalid-variance = "error"
invalid-yield = "error"
missing-argument = "error"
missing-attribute = "error"
missing-import = "error"
missing-module-attribute = "error"
missing-override-decorator = "error"
missing-source = "error"
missing-source-for-stubs = "error"
no-access = "error"
no-matching-overload = "error"
non-convergent-recursion = false
non-exhaustive-match = false
not-a-type = "error"
not-async = "error"
not-callable = "error"
not-iterable = "error"
not-required-key-access = "error"
open-unpacking = "error"
protocol-implicitly-defined-attribute = "error"
read-only = "error"
redefinition = "error"
redundant-cast = "error"
redundant-condition = "error"
unannotated-attribute = "error"
unannotated-parameter = "error"
unannotated-return = "error"
unbound-name = "error"
unexpected-keyword = "error"
unexpected-positional-argument = "error"
unknown-name = "error"
unnecessary-comparison = "error"
unnecessary-type-conversion = "error"
unreachable = "error"
unresolvable-dunder-all = "error"
unsafe-overlap = "error"
unsupported = "error"
unsupported-delete = "error"
unsupported-operation = "error"
untyped-import = "error"
unused-coroutine = "error"
unused-ignore = "error"
variance-mismatch = "error"

# [MANAGED] pyright
[tool.pyright]
exclude = [
  "**/.*",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/.venv",
  "**/.venv/**",
  "**/__pycache__",
  "**/__pyrefly_virtual__/**",
  "**/dist-packages",
  "**/dist-packages/**",
  "**/node_modules",
  "**/site-packages",
  "**/site-packages/**",
  "**/tests/fixtures",
  "**/tests/fixtures/**",
  "**/venv",
  "**/venv/**",
  ".reports",
  ".venv",
]
extraPaths = [ ".", "src" ]
include = [ "examples", "src", "tests" ]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "none"
reportInconsistentConstructor = "error"
reportInvalidTypeForm = "none"
reportMissingImports = "error"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnreachable = "none"
reportUnsupportedDunderAll = "none"
reportUntypedBaseClass = "none"
reportUntypedFunctionDecorator = "none"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
typeCheckingMode = "strict"
venv = ".venv"
venvPath = ".."

[[tool.pyright.executionEnvironments]]
extraPaths = [ ".", "src" ]
reportPrivateUsage = "none"
root = "examples"

[[tool.pyright.executionEnvironments]]
extraPaths = [ "src" ]
reportPrivateUsage = "error"
root = "src"

[[tool.pyright.executionEnvironments]]
extraPaths = [ ".", "src" ]
reportPrivateUsage = "none"
root = "tests"

# [MANAGED] pytest
[tool.pytest.ini_options]
addopts = [
  "--cov-report=term-missing:skip-covered",
  "--cov=.",
  "--durations=10",
  "--ignore-glob=*/tests/_constants/*",
  "--ignore-glob=*/tests/_models/*",
  "--ignore-glob=*/tests/_protocols/*",
  "--ignore-glob=*/tests/_typings/*",
  "--ignore-glob=*/tests/_utilities/*",
  "--ignore-glob=*/tests/constants.py",
  "--ignore-glob=*/tests/models.py",
  "--ignore-glob=*/tests/protocols.py",
  "--ignore-glob=*/tests/typings.py",
  "--ignore-glob=*/tests/utilities.py",
  "--markdown-docs",
  "--strict-markers",
]
filterwarnings = [
  "ignore:.*cannot collect test class.*because it has a __init__ constructor.*:pytest.PytestCollectionWarning",
]
markers = [
  "docker: tests requiring Docker",
  "e2e: end-to-end integration tests",
  "edge_cases: edge case tests",
  "integration: integration tests",
  "performance: performance and benchmark tests",
  "resilience: resilience tests",
  "slow: slow-running tests",
  "stress: stress tests",
  "unit: unit tests",
]
minversion = "8.0"
python_classes = [ "Test*" ]
python_files = [ "*_test.py", "*_tests.py", "test_*.py" ]

# [MANAGED] ruff
[tool.ruff]
exclude = [
  "**/__pyrefly_virtual__/**",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "archive",
  "backup",
  "build",
  "dist",
  "htmlcov",
  "temp-backup",
  "tests/fixtures",
  "tests/fixtures/**",
  "typings",
  "vendor",
  "venv",
]
fix = false
line-length = 88
preview = true
respect-gitignore = true
show-fixes = true
src = [ "examples", "src", "tests" ]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
ignore = [
  "missing-return-type-private-function",
  "get-attr-with-constant",
  "set-attr-with-constant",
  "assert-raises-exception",
  "blind-except",
  "complex-structure",
  "missing-trailing-comma",
  "missing-copyright-notice",
  "incorrect-blank-line-before-class",
  "multi-line-summary-second-line",
  "docstring-missing-returns",
  "docstring-extraneous-returns",
  "docstring-missing-yields",
  "docstring-missing-exception",
  "docstring-extraneous-exception",
  "line-too-long",
  "commented-out-code",
  "boolean-positional-value-in-call",
  "logging-f-string",
  "invalid-first-argument-name-for-method",
  "camelcase-imported-as-lowercase",
  "mixed-case-variable-in-global-scope",
  "unnecessary-placeholder",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-branches",
  "too-many-arguments",
  "too-many-locals",
  "too-many-statements",
  "too-many-positional-arguments",
  "too-many-nested-blocks",
  "no-self-use",
  "unnecessary-lambda",
  "redefined-loop-name",
  "bad-dunder-method-name",
  "snake-case-type-alias",
  "bad-quotes-inline-string",
  "ambiguous-unicode-character-string",
  "ambiguous-unicode-character-docstring",
  "ambiguous-unicode-character-comment",
  "collection-literal-concatenation",
  "hardcoded-sql-expression",
  "typing-only-first-party-import",
  "typing-only-third-party-import",
  "typing-only-standard-library-import",
  "raise-vanilla-args",
  "try-consider-else",
  "raise-within-try",
  "non-pep695-type-alias",
  "blank-line-with-whitespace",
]
select = [ "ALL" ]

[tool.ruff.lint.flake8-tidy-imports.banned-api.argparse]
msg = "Use cli.register_result_command + Pydantic model from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.colorama]
msg = "Use cli.print with c.Cli.MessageStyles."

[tool.ruff.lint.flake8-tidy-imports.banned-api.getpass]
msg = "Use cli.prompt_password from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.orjson]
msg = "Use cli.read_json_file / cli.write_json_file / u.Cli.json_dumps from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.prompt_toolkit]
msg = "Use cli.prompt / cli.confirm / cli.prompt_choice / cli.prompt_password."

[tool.ruff.lint.flake8-tidy-imports.banned-api.rich]
msg = "Use cli.print / cli.display_message / cli.render_panel / cli.create_tree."

[tool.ruff.lint.flake8-tidy-imports.banned-api.simplejson]
msg = "Use cli.read_json_file / cli.write_json_file / u.Cli.json_dumps."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tabulate]
msg = "Use cli.format_table / cli.show_table from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tomlkit]
msg = "Use cli.read_toml_file / u.Cli.toml_load (flext-infra workspace orchestration is exempt)."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tomllib]
msg = "Use cli.read_toml_file / u.Cli.toml_load (flext-infra workspace orchestration is exempt)."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tqdm]
msg = "Use cli.display_progress from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.typer]
msg = "Use cli.create_app_with_common_params / cli.register_command from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.ujson]
msg = "Use cli.read_json_file / cli.write_json_file / u.Cli.json_dumps."

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = [
  "flext_cli",
  "flext_core",
  "flext_db_oracle",
  "flext_meltano",
  "flext_observability",
  "flext_oracle_wms",
  "flext_target_oracle_wms",
]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"**/.vulture_whitelist.py" = [ "ALL" ]
"**/*_pb2*.py" = [ "ALL" ]
"**/*dispatcher*" = [  ]
"**/*docs*" = [ "implicit-namespace-package", "suspicious-subprocess-import", "subprocess-without-shell-equals-true", "print" ]
"**/*examples*" = [
  "any-type",
  "complex-structure",
  "undocumented-public-function",
  "shebang-not-executable",
  "boolean-type-hint-positional-argument",
  "boolean-default-value-positional-argument",
  "line-contains-todo",
  "implicit-namespace-package",
  "invalid-module-name",
  "magic-value-comparison",
  "hardcoded-password-string",
  "hardcoded-password-func-arg",
  "try-except-continue",
  "suspicious-subprocess-import",
  "subprocess-without-shell-equals-true",
  "print",
  "relative-imports",
]
"**/*exceptions*" = [ "builtin-variable-shadowing", "hardcoded-password-string", "private-member-access" ]
"**/*handlers*" = [  ]
"**/*instrumentation*" = [ "complex-structure", "boolean-type-hint-positional-argument", "private-member-access" ]
"**/*loggings*" = [ "too-many-public-methods", "global-statement" ]
"**/*middleware*" = [ "any-type", "boolean-type-hint-positional-argument", "boolean-default-value-positional-argument", "unnecessary-dunder-call", "hardcoded-password-default" ]
"**/*models*" = [ "any-type", "boolean-type-hint-positional-argument", "import-private-name", "property-with-parameters", "global-statement" ]
"**/*oracle*" = [ "call-datetime-strptime-without-zone" ]
"**/*result*" = [ "import-private-name", "private-member-access" ]
"**/*runtime*" = [  ]
"**/*scripts*" = [
  "shebang-not-executable",
  "line-contains-todo",
  "implicit-namespace-package",
  "too-many-return-statements",
  "too-many-branches",
  "too-many-statements",
  "magic-value-comparison",
  "redefined-loop-name",
  "hardcoded-password-string",
  "hardcoded-password-default",
  "suspicious-subprocess-import",
  "subprocess-without-shell-equals-true",
  "print",
  "relative-imports",
]
"**/*service*" = [ "mixed-case-variable-in-class-scope", "unnecessary-dunder-call", "suspicious-subprocess-import", "subprocess-without-shell-equals-true", "private-member-access" ]
"**/*subprocess_utils*" = [ "suspicious-subprocess-import", "subprocess-without-shell-equals-true" ]
"**/*tests*" = [
  "missing-type-function-argument",
  "missing-type-args",
  "missing-type-kwargs",
  "any-type",
  "unused-function-argument",
  "unused-method-argument",
  "unused-class-method-argument",
  "unused-static-method-argument",
  "unused-lambda-argument",
  "get-attr-with-constant",
  "set-attr-with-constant",
  "useless-expression",
  "class-as-data-structure",
  "complex-structure",
  "undocumented-public-module",
  "undocumented-public-class",
  "undocumented-public-method",
  "undocumented-public-function",
  "undocumented-public-package",
  "undocumented-public-nested-class",
  "undocumented-public-init",
  "f-string-in-exception",
  "undefined-export",
  "boolean-type-hint-positional-argument",
  "boolean-default-value-positional-argument",
  "boolean-positional-value-in-call",
  "reimplemented-operator",
  "implicit-namespace-package",
  "error-suffix-on-exception-name",
  "invalid-module-name",
  "dict-index-missing-items",
  "compare-to-empty-string",
  "import-private-name",
  "unnecessary-dunder-call",
  "too-many-public-methods",
  "too-many-branches",
  "too-many-arguments",
  "too-many-locals",
  "too-many-statements",
  "too-many-positional-arguments",
  "redefined-argument-from-local",
  "magic-value-comparison",
  "no-self-use",
  "eq-without-hash",
  "redefined-loop-name",
  "pytest-raises-too-broad",
  "pytest-composite-assertion",
  "pytest-fixture-param-without-value",
  "pep484-style-positional-only-parameter",
  "mutable-class-default",
  "unused-async",
  "assert",
  "bad-file-permissions",
  "hardcoded-bind-all-interfaces",
  "hardcoded-password-string",
  "hardcoded-password-func-arg",
  "hardcoded-password-default",
  "hardcoded-temp-file",
  "try-except-pass",
  "try-except-continue",
  "suspicious-non-cryptographic-random-usage",
  "suspicious-subprocess-import",
  "subprocess-without-shell-equals-true",
  "start-process-with-partial-path",
  "hardcoded-sql-expression",
  "suppressible-exception",
  "multiple-with-statements",
  "private-member-access",
  "missing-todo-author",
  "missing-todo-link",
  "relative-imports",
  "raise-vanilla-args",
  "type-check-without-type-error",
]
"**/*typings*" = [ "any-type" ]
"**/*utilities*" = [ "complex-structure", "module-import-not-at-top-of-file", "unnecessary-dunder-call", "subprocess-run-without-check", "suspicious-subprocess-import", "subprocess-without-shell-equals-true" ]
"**/__init__.py" = [
  "builtin-import-shadowing",
  "any-type",
  "undocumented-public-init",
  "unused-import",
  "undefined-local-with-import-star",
  "undefined-local-with-import-star-usage",
  "undefined-export",
  "implicit-namespace-package",
  "invalid-module-name",
  "import-private-name",
  "non-empty-init-module",
  "runtime-import-in-type-checking-block",
]
"**/_constants/*.py" = [ "hardcoded-password-string" ]
"**/_utilities/parser.py" = [ "unused-static-method-argument", "boolean-type-hint-positional-argument" ]
"**/alert_manager*.py" = [ "suspicious-url-open-usage" ]
"**/constants.py" = [ "hardcoded-password-string" ]
"**/container.py" = [ "any-type", "private-member-access" ]
"**/context.py" = [  ]
"**/external_command*.py" = [ "suspicious-subprocess-import", "subprocess-without-shell-equals-true" ]
"**/file_tools.py" = [ "undocumented-public-method" ]
"**/managers.py" = [ "hardcoded-password-string" ]
"**/models.py" = [ "import-outside-top-level", "unnecessary-dunder-call", "exec-builtin", "hardcoded-password-string" ]
"**/orchestrator*.py" = [ "suspicious-subprocess-import", "subprocess-without-shell-equals-true" ]
"**/output.py" = [ "boolean-type-hint-positional-argument" ]
"**/plugins/*.py" = [ "boolean-type-hint-positional-argument", "boolean-default-value-positional-argument", "suspicious-subprocess-import", "subprocess-without-shell-equals-true", "start-process-with-partial-path", "relative-imports" ]
"**/protocol_impls/*.py" = [ "private-member-access" ]
"**/providers/*.py" = [ "hardcoded-password-func-arg", "hardcoded-password-default" ]
"**/services/prompts.py" = [ "undocumented-public-method", "undocumented-public-init" ]
"**/settings.py" = [ "any-type", "boolean-type-hint-positional-argument", "private-member-access" ]
"**/singer/*.py" = [ "suspicious-subprocess-import", "subprocess-without-shell-equals-true" ]
"**/tools/*.py" = [ "boolean-type-hint-positional-argument", "boolean-default-value-positional-argument", "invalid-function-name", "suspicious-subprocess-import", "subprocess-without-shell-equals-true", "start-process-with-partial-path", "print" ]
"**/tools/**/*.py" = [ "boolean-type-hint-positional-argument", "boolean-default-value-positional-argument", "invalid-function-name", "suspicious-subprocess-import", "subprocess-without-shell-equals-true", "start-process-with-partial-path", "print" ]
"**/typings.py" = [ "none-not-at-end-of-union" ]
"**/workspace/*.py" = [ "import-outside-top-level", "suspicious-subprocess-import", "subprocess-without-shell-equals-true", "start-process-with-partial-path" ]

# [MANAGED] tomlsort
[tool.tomlsort]
all = true
in_place = true
sort_first = [ "build-system", "dependency-groups", "project", "tool" ]

[tool.yamlfix]
explicit_start = false
line_length = 88
preserve_quotes = true
section_whitelines = 1
whitelines = 1

